# clique-cover-lp

./: .gitignore  Doku_Til.md  README.md  main.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
data/: uniform_n10_s10_r10_metadata.json  uniform_n10_s10_r10_original.pkl  uniform_n10_s10_r10_perturbed.pkl  uniform_n10_s10_r30_metadata.json  uniform_n10_s10_r30_perturbed.pkl  uniform_n10_s20_r10_metadata.json  uniform_n10_s20_r10_original.pkl  uniform_n10_s20_r10_perturbed.pkl  uniform_n10_s20_r30_metadata.json  uniform_n10_s20_r30_perturbed.pkl  uniform_n10_s5_r10_metadata.json  uniform_n10_s5_r10_original.pkl  uniform_n10_s5_r10_perturbed.pkl  uniform_n10_s5_r30_metadata.json  uniform_n10_s5_r30_perturbed.pkl  uniform_n3_s10_r10_metadata.json  uniform_n3_s10_r10_original.pkl  uniform_n3_s10_r10_perturbed.pkl  uniform_n3_s10_r30_metadata.json  uniform_n3_s10_r30_perturbed.pkl  uniform_n3_s20_r10_metadata.json  uniform_n3_s20_r10_perturbed.pkl  uniform_n3_s20_r30_metadata.json  uniform_n3_s20_r30_original.pkl  uniform_n3_s20_r30_perturbed.pkl  uniform_n3_s5_r10_metadata.json  uniform_n3_s5_r10_original.pkl  uniform_n3_s5_r10_perturbed.pkl  uniform_n3_s5_r30_metadata.json  uniform_n3_s5_r30_perturbed.pkl  uniform_n5_s10_r10_metadata.json  uniform_n5_s10_r10_perturbed.pkl  uniform_n5_s10_r30_metadata.json  uniform_n5_s10_r30_original.pkl  uniform_n5_s10_r30_perturbed.pkl  uniform_n5_s20_r10_metadata.json  uniform_n5_s20_r10_perturbed.pkl  uniform_n5_s20_r30_metadata.json  uniform_n5_s20_r30_original.pkl  uniform_n5_s20_r30_perturbed.pkl  (+5 more)
experiments/: scratch.py  (+7 more)
(+355 files in other folders)
