[project]
name = "clique-cover-lp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobipy>=12.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pulp>=3.1.1",
    "ruff>=0.11.7",
    "seaborn>=0.13.2",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
